<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="32dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        tools:context=".activities.MainActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_settings_applications_50" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ic_avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_placeholder_avatar"
            app:layout_constraintBottom_toBottomOf="@+id/ic_settings"
            app:layout_constraintEnd_toStartOf="@+id/ic_settings"
            app:layout_constraintTop_toTopOf="@+id/ic_settings" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ic_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ic_settings" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_countries_meals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/countries_meals"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_title_app_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_app_name" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_countries_meals" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_latest_meals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/meals_today_s"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_country" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_meals_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_latest_meals" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_no_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_no_connection" />

        <ProgressBar
            android:id="@+id/pb_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/bg_progressbar"
            android:progress="0"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>