<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailMealActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_thumbnail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/grey_200"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                tools:src="@mipmap/ic_launcher" />
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_meal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_thumbnail"
            tools:text="Teriyaki Chicken Casserole" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="?attr/colorOnPrimary"
            app:cardCornerRadius="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_meal_name"
            app:strokeColor="?attr/colorAccent"
            app:strokeWidth="2dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_thumbnail"
                tools:text="Japanese" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="?attr/colorOnPrimary"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/card_area"
            app:layout_constraintStart_toEndOf="@+id/card_area"
            app:layout_constraintTop_toTopOf="@+id/card_area"
            app:strokeColor="@color/yellow_500"
            app:strokeWidth="2dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_thumbnail"
                tools:text="Chicken" />
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textColor="?attr/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/card_category"
            app:layout_constraintStart_toEndOf="@+id/card_category"
            app:layout_constraintTop_toTopOf="@+id/card_category"
            tools:text="#Meat,Casserole" />

        <Button
            android:id="@+id/btn_view_yt"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_view_on_youtube"
            app:icon="@drawable/ic_youtube"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_area"
            app:strokeColor="?attr/colorPrimary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_ingredient"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_view_yt" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_ingredient"
            tools:text="Ingredient Ingredient\nIngredient" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_instruction"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ingredient" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_instruction"
            tools:text="Instruction Instruction\nInstruction" />

        <ProgressBar
            android:id="@+id/pb_meal_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/bg_progressbar"
            android:progress="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>